update form qlnhanvien, form bao cao

--- a/QUANLYLINHKIEN_PTUD/frmMainUI_Staff.resx
+++ b/QUANLYLINHKIEN_PTUD/frmMainUI_Staff.resx
@@ -128,7 +128,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD6
-        OwAAAk1TRnQBSQFMAgEBCQEAAUABAAFAAQABHgEAAR4BAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAF4
+        OwAAAk1TRnQBSQFMAgEBCQEAAUgBAAFIAQABHgEAAR4BAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAF4
         AwABWgMAAQEBAAEQBQABYAFU/wANAAH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/
         AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/xgAB3gF7Af8BfwH/AX8B/wF/
         Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/
@@ -386,6 +386,9 @@
         Af8B/AEHAfABfwL/AcABMAIAAT8BAAH/AeABHwf/AeABMAIAAX8BAAr/AfABfwP/AQAK/wHwBP8BAAs=
 </value>
   </data>
+  <metadata name="cmstrp_Report.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>282, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
