--- a/QUANLYLINHKIEN_PTUD/frmCustomer.resx
+++ b/QUANLYLINHKIEN_PTUD/frmCustomer.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABC
-        AwAAAk1TRnQBSQFMAwEBAAGQAQABkAEAARkBAAEZAQAE/wERAQAI/wFCAU0BNgcAATYDAAEoAwABZAMA
+        AwAAAk1TRnQBSQFMAwEBAAGYAQABmAEAARkBAAEZAQAE/wERAQAI/wFCAU0BNgcAATYDAAEoAwABZAMA
         ARkDAAEBAQABEAUAAYgBE/8A/wCSAAH/AX8B/wF/wgAB/wF/Ad4BewH/AX8B/wF/vgAB/wF/Ad4BewH/
         AX8B3gF7vgAB/wF/Ad4BewH/AX8B3gF7sAAB/wF/Ad4BewHeAXsB3gF7Af8BfwH/AX8CAAH/AX8B3gF7
         Af8BfwHeAXuuAAH/AX8B3gF7Ad4BewHeAXsB3gF7Ad4BewHeAXsB/wF/Ad4BewHeAXsB/wF/Ad4Be64A
@@ -149,7 +149,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD0
-        MAAAAk1TRnQBSQFMAgEBBAEAATgBAAE4AQABIwEAASMBAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAGM
+        MAAAAk1TRnQBSQFMAgEBBAEAAUABAAFAAQABIwEAASMBAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAGM
         AwABRgMAAQEBAAEQBQABkAFM/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
         /wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AK4AAd0BdwE3AVsBsgFCAZABNgGQATYB0gFC
         AVgBXwHeAXsQAAH/AX8B/wF/OgABWwEaAXsBGgF7ARoBewEaAXsBGgF7ARoBewEaAXsBGgF7ARoBewEa
@@ -374,6 +374,9 @@
   </metadata>
   <metadata name="Column5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
